sources/libClangSharp/ClangSharp.h

enum CX_ObjCMessageReceiverKind {
    CX_OMRK_Invalid,
    CX_OMRK_Class = static_cast<int>(clang::ObjCMessageExpr::Class) + 1,
    CX_OMRK_Instance = static_cast<int>(clang::ObjCMessageExpr::Instance) + 1,
    CX_OMRK_SuperClass = static_cast<int>(clang::ObjCMessageExpr::SuperClass) + 1,
    CX_OMRK_SuperInstance = static_cast<int>(clang::ObjCMessageExpr::SuperInstance) + 1,
};
enum CX_ObjCPropertyRefReceiverKind {
    CX_OPRK_Invalid,
    CX_OPRK_Object,
    CX_OPRK_Super,
    CX_OPRK_Class,
};
enum CX_OverloadedOperatorKind {
    CX_OO_Invalid = clang::OO_None,
#define OVERLOADED_OPERATOR(Name,Spelling,Token,Unary,Binary,MemberOnly) \
    CX_OO_##Name = clang::OO_##Name,
#include "clang/Basic/OperatorKinds.def"
};
enum CX_TemplateSpecializationKind {
    CX_TSK_Invalid,
    CX_TSK_Undeclared = clang::TSK_Undeclared + 1,
    CX_TSK_ImplicitInstantiation = clang::TSK_ImplicitInstantiation + 1,
    CX_TSK_ExplicitSpecialization = clang::TSK_ExplicitSpecialization + 1,
    CX_TSK_ExplicitInstantiationDeclaration = clang::TSK_ExplicitInstantiationDeclaration + 1,
    CX_TSK_ExplicitInstantiationDefinition = clang::TSK_ExplicitInstantiationDefinition + 1,
};
enum CX_TypeTrait {
    CX_TT_Invalid,
#define TYPE_TRAIT_1(Spelling, Name, Key) CX_UTT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_UTT_Last = 0 // CX_UTT_Last == last CX_UTT_XX in the enum.
#define TYPE_TRAIT_1(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
    ,
#define TYPE_TRAIT_2(Spelling, Name, Key) CX_BTT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_BTT_Last = CX_UTT_Last // CX_BTT_Last == last CX_BTT_XX in the enum.
#define TYPE_TRAIT_2(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
    ,
#define TYPE_TRAIT_N(Spelling, Name, Key) CX_TT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_TT_Last = CX_BTT_Last // CX_TT_Last == last CX_TT_XX in the enum.
#define TYPE_TRAIT_N(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
};
enum CX_UnaryExprOrTypeTrait {
    CX_UETT_Invalid,
 #define UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) CX_UETT_##Name,
 #define CXX11_UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) CX_UETT_##Name,
 #include "clang/Basic/TokenKinds.def"
    CX_UETT_Last = -1 // CX_UETT_Last == last CX_UETT_XX in the enum.
 #define UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) +1
 #define CXX11_UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) +1
 #include "clang/Basic/TokenKinds.def"
};
struct CX_TemplateArgumentLoc {
    const clang::TemplateArgumentLoc* value;
    CXTranslationUnit tu;
};
CLANGSHARP_LINKAGE CX_TemplateArgumentLoc clangsharp_Cursor_getTemplateArgumentLoc(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getTemplateParameter(CXCursor C, unsigned listIndex, unsigned parameterIndex);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getTemplatedDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getTemplateInstantiationPattern(CXCursor C);
CLANGSHARP_LINKAGE CX_TemplateSpecializationKind clangsharp_Cursor_getTemplateSpecializationKind(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getTemplateTypeParmDepth(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getTemplateTypeParmIndex(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getTemplateTypeParmPosition(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getThisObjectType(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getThisType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getTrailingRequiresClause(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getTypedefNameForAnonDecl(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasCatchAll(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasObjCAvailabilityVersion(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsDelegateInitCall(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsMessagingGetter(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsMessagingSetter(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumCatchStmts(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumObjCLiteralElements(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getObjCAvailabilityVersion(CXCursor C, llvm::VersionTuple* version);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getObjCDictionaryKey(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getObjCDictionaryValue(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_ObjCMessageReceiverKind clangsharp_Cursor_getObjCMessageReceiverKind(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getObjCMessageReceiverType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getObjCPropertyRefClassReceiver(CXCursor C);
CLANGSHARP_LINKAGE CX_ObjCPropertyRefReceiverKind clangsharp_Cursor_getObjCPropertyRefReceiverKind(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getSetAtIndexMethodDecl(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getTypeOperand(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getTypeParam(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_UnaryExprOrTypeTrait clangsharp_Cursor_getUnaryExprOrTypeTraitKind(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getUnderlyingDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getUninstantiatedDefaultArg(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getUsedContext(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getUsingEnumDeclEnumDecl(CXCursor C);