sources/ClangSharp.Interop/clangsharp/clangsharp.cs


    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplateArgumentLoc", ExactSpelling = true)]
    public static extern CX_TemplateArgumentLoc Cursor_getTemplateArgumentLoc(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplateParameter", ExactSpelling = true)]
    public static extern CXCursor Cursor_getTemplateParameter(CXCursor C, [NativeTypeName("unsigned int")] uint listIndex, [NativeTypeName("unsigned int")] uint parameterIndex);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplatedDecl", ExactSpelling = true)]
    public static extern CXCursor Cursor_getTemplatedDecl(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplateInstantiationPattern", ExactSpelling = true)]
    public static extern CXCursor Cursor_getTemplateInstantiationPattern(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplateSpecializationKind", ExactSpelling = true)]
    public static extern CX_TemplateSpecializationKind Cursor_getTemplateSpecializationKind(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplateTypeParmDepth", ExactSpelling = true)]
    public static extern int Cursor_getTemplateTypeParmDepth(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplateTypeParmIndex", ExactSpelling = true)]
    public static extern int Cursor_getTemplateTypeParmIndex(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTemplateTypeParmPosition", ExactSpelling = true)]
    public static extern int Cursor_getTemplateTypeParmPosition(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getThisObjectType", ExactSpelling = true)]
    public static extern CXType Cursor_getThisObjectType(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getThisType", ExactSpelling = true)]
    public static extern CXType Cursor_getThisType(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTrailingRequiresClause", ExactSpelling = true)]
    public static extern CXCursor Cursor_getTrailingRequiresClause(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTypedefNameForAnonDecl", ExactSpelling = true)]
    public static extern CXCursor Cursor_getTypedefNameForAnonDecl(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInclusionDirectiveKind", ExactSpelling = true)]
    public static extern CX_InclusionDirectiveKind Cursor_getInclusionDirectiveKind(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInclusionDirectiveImportedModule", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getInclusionDirectiveImportedModule(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInclusionDirectiveWasInQuotes", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getInclusionDirectiveWasInQuotes(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsMacroC99Varargs", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsMacroC99Varargs(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsMacroGNUVarargs", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsMacroGNUVarargs(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsMacroVariadic", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsMacroVariadic(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getMacroExpansionDefinition", ExactSpelling = true)]
    public static extern CXCursor Cursor_getMacroExpansionDefinition(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getMacroParamName", ExactSpelling = true)]
    public static extern CXString Cursor_getMacroParamName(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getMacroTokenKind", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getMacroTokenKind(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getMacroTokenSpelling", ExactSpelling = true)]
    public static extern CXString Cursor_getMacroTokenSpelling(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getNumMacroParams", ExactSpelling = true)]
    public static extern int Cursor_getNumMacroParams(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getNumMacroTokens", ExactSpelling = true)]
    public static extern int Cursor_getNumMacroTokens(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getHasCatchAll", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getHasCatchAll(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getHasObjCAvailabilityVersion", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getHasObjCAvailabilityVersion(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsDelegateInitCall", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsDelegateInitCall(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsMessagingGetter", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsMessagingGetter(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsMessagingSetter", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsMessagingSetter(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getNumCatchStmts", ExactSpelling = true)]
    public static extern int Cursor_getNumCatchStmts(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getNumObjCLiteralElements", ExactSpelling = true)]
    public static extern int Cursor_getNumObjCLiteralElements(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getObjCAvailabilityVersion", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getObjCAvailabilityVersion(CXCursor C, [NativeTypeName("llvm::VersionTuple *")] VersionTuple* version);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getObjCDictionaryKey", ExactSpelling = true)]
    public static extern CXCursor Cursor_getObjCDictionaryKey(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getObjCDictionaryValue", ExactSpelling = true)]
    public static extern CXCursor Cursor_getObjCDictionaryValue(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getObjCMessageReceiverKind", ExactSpelling = true)]
    public static extern CX_ObjCMessageReceiverKind Cursor_getObjCMessageReceiverKind(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getObjCMessageReceiverType", ExactSpelling = true)]
    public static extern CXType Cursor_getObjCMessageReceiverType(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getObjCPropertyRefClassReceiver", ExactSpelling = true)]
    public static extern CXCursor Cursor_getObjCPropertyRefClassReceiver(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getObjCPropertyRefReceiverKind", ExactSpelling = true)]
    public static extern CX_ObjCPropertyRefReceiverKind Cursor_getObjCPropertyRefReceiverKind(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getSetAtIndexMethodDecl", ExactSpelling = true)]
    public static extern CXCursor Cursor_getSetAtIndexMethodDecl(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTypeOperand", ExactSpelling = true)]
    public static extern CXType Cursor_getTypeOperand(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getTypeParam", ExactSpelling = true)]
    public static extern CXCursor Cursor_getTypeParam(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getUnaryExprOrTypeTraitKind", ExactSpelling = true)]
    public static extern CX_UnaryExprOrTypeTrait Cursor_getUnaryExprOrTypeTraitKind(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getUnderlyingDecl", ExactSpelling = true)]
    public static extern CXCursor Cursor_getUnderlyingDecl(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getUninstantiatedDefaultArg", ExactSpelling = true)]
    public static extern CXCursor Cursor_getUninstantiatedDefaultArg(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getUsedContext", ExactSpelling = true)]
    public static extern CXCursor Cursor_getUsedContext(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getUsingEnumDeclEnumDecl", ExactSpelling = true)]
    public static extern CXCursor Cursor_getUsingEnumDeclEnumDecl(CXCursor C);
